# tiptap-editor

./: .gitignore  AGENTS.md  IDEA.md  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json  vitest.config.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/web-playground/: index.html  package.json  tsconfig.json  (+1 more)
docs/: advanced-table-editing-boundary.md  ai-export.md  author-first-ux-review-gate.md  authoring-structure-projections.md  broken-reference-inline-highlight-boundary.md  corporate-template-export-boundary.md  data-grid-row-diff-merge-boundary.md  desktop-native-smoke.md  development-direction-review.md  development-plan.md  diff-model.md  document-format.md  drawio-external-editor-bridge.md  drawio-integration-boundary.md  editor-schema.md  editor-workbench-ux-improvement-guide.md  existing-product-parity-plan.md  git-integration-boundary.md  large-data-grid-boundary.md  mvp-roadmap.md  native-file-explorer-boundary.md  native-pptx-export-boundary.md  pdf-export-boundary.md  phase-0-acceptance.md  phase-1-acceptance.md  phase-2-acceptance.md  phase-2-closure.md  phase-3-closure.md  phase-3-plan.md  phase-4-closure.md  phase-4-plan.md  phase-5-plan.md  publishing-style-profiles.md  requirement-tagging-boundary.md  review-accept-reject-boundary.md  section-folding-boundary.md  serialization.md  slide-export-boundary.md  tauri-user-review-action-plan.md  ui-shell-plan.md  (+5 more)
(+95 files in other folders)
