[package]
name = "sdoc-desktop"
version = "0.0.0"
description = "Desktop shell for the SDoc editor"
authors = ["SDoc Contributors"]
edition = "2021"

[lib]
name = "sdoc_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
