[package]
name = "sdoc-desktop"
version = "0.0.0"
description = "Desktop shell for the SDoc editor"
authors = ["SDoc Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify = "8.2.0"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
trash = "5.2.5"

[dev-dependencies]
serde_json = "1"
